--- a/_config.yml
+++ b/_config.yml
@@ -10,14 +10,14 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark",  "default
 # Site Settings
 locale                   : "en-US"
 title                    : "Nils Rietze"
-
+layout                   : "splash"
 header:
-  image: assets/utah_hills.jpg
-  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
-  caption: "Photo credit: [**Sentinel 2**](https://apps.sentinel-hub.com/eo-browser/)"
+  image                  : assets/utah_hills.jpg
+  overlay_filter         : 0.5 # same as adding an opacity of 0.5 to a black background
+  caption                : "Photo credit: [**Sentinel 2**](https://apps.sentinel-hub.com/eo-browser/)"
   actions:
-    - label: "More Info"
-      url: "https://apps.sentinel-hub.com/eo-browser/"
+    - label              : "More Info"
+      url                : "https://apps.sentinel-hub.com/eo-browser/"
 
 # Site Author
 author:
