--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,8 @@ main:
   - title: Research
     url: /research/
 
-  - title: Publications
-    url: /publications/
-
-  - title: Software
-    url: /software/
+  - title: Maps and Dataviz
+    url: /maps/
 
   - title: Posts
     url: /posts/
